--- a/css/style.css
+++ b/css/style.css
@@ -314,7 +314,7 @@
 
 /*** Footer ***/
 .footer {
-    background: linear-gradient(rgba(0, 0, 0, .9), rgba(0, 0, 0, .9)), url(../img/capa.jpg) center center no-repeat;
+    background: linear-gradient(rgba(0, 0, 0, .9), rgba(0, 0, 0, .9)), url(https://cbagricola.com.br/wp-content/uploads/2022/11/tipos-de-solda.jpeg) center center no-repeat;
     background-size: cover;
 }
 
